packages/jsii/test/negatives/neg.method-name.2.ts
export class MyClass {
  public hello_world() {
    return 'hi';
  }
}
